--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-QUICKNODE_RPC_URL="https://devnet.helius-rpc.com/?api-key=2234879b-145b-4cc0-8176-7a8d8b534484"
-QUICKNODE_RPC_WSS="wss://devnet.helius-rpc.com/?api-key=2234879b-145b-4cc0-8176-7a8d8b534484"
+HELIUS_RPC_URL="https://devnet.helius-rpc.com/?api-key=2234879b-145b-4cc0-8176-7a8d8b534484"
+HELIUS_RPC_WSS="wss://devnet.helius-rpc.com/?api-key=2234879b-145b-4cc0-8176-7a8d8b534484"
