--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  # cupertino_icons: ^1.0.8
   go_router: ^10.0.0
   solana: ^0.29.1
   bip39: ^1.0.6
+  pinenacl: ^0.6.0
   flutter_secure_storage: ^8.0.0
-  flutter_dotenv: ^5.1.0 
+  flutter_dotenv: ^5.1.0
+  win32: ^5.5.3
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    -.env
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
