--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   flutter_dotenv: ^5.1.0
   win32: ^5.5.3
+  # babylonjs_viewer: ^1.2.0
+  flutter_3d_controller: ^1.3.1
+  path_provider: ^2.1.4
+  open_file: ^3.5.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
