--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   # cupertino_icons: ^1.0.8
   go_router: ^10.0.0
-  solana: ^0.29.1
+  solana: ^0.30.4
   bip39: ^1.0.6
   pinenacl: ^0.6.0
   flutter_secure_storage: ^8.0.0
@@ -46,6 +46,10 @@ dependencies:
   path_provider: ^2.1.4
   open_file: ^3.5.3
   permission_handler: ^11.3.1
+  dio: ^5.6.0
+  path: ^1.9.0
+  shared_preferences: ^2.3.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
